tests/baselines/reference/duplicateIdentifierDifferentSpelling.errors.txt
duplicateIdentifierDifferentSpelling.ts(3,3): error TS2300: Duplicate identifier '3'.
duplicateIdentifierDifferentSpelling.ts(6,21): error TS1117: An object literal cannot have multiple properties with the same name.


==== duplicateIdentifierDifferentSpelling.ts (2 errors) ====
    class A {
      0b11 = '';
      3 = '';
      ~
!!! error TS2300: Duplicate identifier '3'.
    }
    
    var X = { 0b11: '', 3: '' };
                        ~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    